<resources>
    <string name="module_menu_app_name">Module.Menu</string>
    <string name="module_menu_food_unit">份</string>
    <string name="module_menu_food_require_tip">必选商品，已加入购物车</string>
    <string name="module_menu_food_number">%1$d份</string>
    <string name="module_menu_number">数量</string>
    <string name="module_menu_extra_price">+ %1$s</string>
    <string name="module_menu_title">菜单</string>
    <string name="module_menu_custom_food_title">自定义商品</string>
    <string name="module_menu_sweep">扫一扫</string>
    <string name="module_menu_shop_specialty">本店招牌</string>
    <string name="module_menu_hint_search_food">请输入商品名称或简拼</string>
    <string name="module_menu_input_custom_food_note">手动输入备注</string>
    <string name="module_menu_custom_food_label_name">品名</string>
    <string name="module_menu_custom_food_label_category">商品分类</string>
    <string name="module_menu_custom_food_unit">份</string>
    <string name="module_menu_custom_food_label_unit">点菜单位</string>
    <string name="module_menu_custom_food_label_same_unit">结账单位与点菜单位相同</string>
    <string name="module_menu_custom_food_label_price">单价</string>
    <string name="module_menu_custom_food_label_can_discount">允许打折</string>
    <string name="module_menu_custom_food_label_pass_through">传菜方案</string>
    <string name="module_menu_custom_food_label_note">备注</string>
    <string name="module_menu_text_title_cancel">取消</string>
    <string name="module_menu_text_title_save">保存</string>
    <string name="module_menu_custom_food_order_count">点菜数量</string>
    <string name="module_menu_list_bottom_cart">购物车</string>
    <string name="module_menu_custom_food">自定义商品</string>
    <string name="module_menu_category">菜类</string>
    <string name="module_menu_hint_suit_note">手动输入备注</string>
    <string name="module_menu_suit_label_serving_immediately">暂不上菜</string>
    <string name="module_menu_suit_title">套餐</string>
    <string name="module_menu_cart_combo_sub">套餐%1$d</string>
    <string name="module_menu_add_to_cart">加入购物车</string>
    <string name="module_menu_title_suit_right">介绍/备注</string>
    <string name="module_menu_filter_letter">字母</string>
    <string name="module_menu_custom_food_account_count">结账数量</string>
    <string name="module_menu_custom_food_account_unit">结账单位</string>
    <string name="module_menu_default_account_unit">斤</string>
    <string name="module_menu_default_order_unit">份</string>
    <string name="module_menu_scan">扫码点菜</string>
    <string name="module_menu_list_feed_foodnum">加%1$s%2$s%3$s</string>
    <string name="module_menu_select_category">选择</string>
    <string name="module_menu_menu_category">商品分类</string>
    <string name="module_menu_check_input_food_name">品名不能为空</string>
    <string name="module_menu_check_input_category_name">请选择商品类别</string>
    <string name="module_menu_check_input_count">点菜数量不能为空</string>
    <string name="module_menu_check_input_count_must_than_zero">点菜数量必须大于0</string>
    <string name="module_menu_check_input_unit">点菜单位不能为空</string>
    <string name="module_menu_check_input_account_num">结账数量不能为空</string>
    <string name="module_menu_check_input_account_num_than_zero">结账数量必须大于0</string>
    <string name="module_menu_check_input_account_unit">结账单位不能为空</string>
    <string name="module_menu_check_unit_account_unit_cannot_same">你开启了双单位，结账单位与点菜单位不能相同</string>
    <string name="module_menu_check_input_unit_price">商品单价不能为空</string>
    <string name="module_menu_check_input_unit_price_must_than_zero">商品单价必须大于0</string>
    <string name="module_menu_check_input_num">数量必须大于或等于0小于10000</string>
    <string name="module_menu_check_start_num">%1$s%2$d%3$s起点哦</string>
    <string name="module_menu_save_custom_food_success">自定义菜添加购物车成功</string>
    <string name="module_menu_update_custom_food_success">自定义菜修改成功</string>
    <string name="module_menu_no_permission_custom_food">您没有\"添加自定义菜\"的权限，无法进行此操作！</string>
    <string name="module_menu_load_transfer_failed_retry">传送方案加载失败，点击重试!</string>
    <string name="module_menu_list_placeholder_price_unit">%1$s/%2$s</string>
    <string name="module_menu_suit">套餐</string>
    <string name="module_menu_suit_menu_add_price">需加价%1$s</string>
    <string name="module_menu_modify_cart_failed">点菜失败，网络不给力哦</string>
    <string name="module_menu_load_menu_or_cart_failed">网络不给力，点击重试</string>
    <string name="module_menu_load_failed">网络不给力哦</string>
    <string name="module_menu_suit_menu_require_num">已点%1$s份</string>
    <string name="module_menu_suit_menu_require_num_unit">已点%1$d%2$s</string>
    <string name="module_menu_suit_menu_name_suffix">(%1$s)</string>
    <string name="module_menu_list_suit_detail_price">%1$s</string>
    <string name="module_menu_menu_num_flag">数量</string>
    <string name="module_menu_suit_detail_add_to_cart">加入购物车</string>
    <string name="module_menu_suit_detail_group_num">%1$s/%2$s</string>
    <string name="module_menu_suit_detail_group_num_no_limit">不限制</string>
    <string name="module_menu_suit_sub_num_limit">\"%1$s\"只能点%2$s份哦</string>
    <string name="module_menu_suit_group_menu_num_no_select_prefix">还有</string>
    <string name="module_menu_suit_group_menu_num_no_select">%1$s份%2$s尚未选择</string>
    <string name="module_menu_suit_detail_group_num_limit">\"%1$s\"有数量限制，请取消%2$s份再选新的</string>
    <string name="module_menu_suit_menu_ordered_num">已点%1$s%2$s</string>
    <string name="module_menu_suit_menu_update_confirm">确定</string>
    <string name="module_menu_suit_menu_rule_label">套餐内商品组合计价规则:</string>
    <string name="module_menu_dialog_title_suit_sell_out">提示</string>
    <string name="module_menu_dialog_content_suit_sell_out">套餐的必点商品已售完，不能再点啦</string>
    <string name="module_menu_dialog_button_suit_sell_out">我知道了</string>
    <string name="module_menu_suit_menu_select_none_tip">您还有菜没有选好哦</string>
    <string name="module_menu_suit_menu_select_menu_positive">选好了</string>
    <string name="module_menu_suit_menu_select_menu_negative">继续点单</string>
    <string name="module_menu_suit_menu_detail_load_failed">套餐加载失败，稍后重试</string>
    <string name="module_menu_list_load_failed">菜单列表加载失败，稍后重试</string>
    <string name="module_menu_suit_num_check_zero">套餐数量必须大于0</string>
    <string name="module_menu_cart">购物车</string>
    <string name="module_menu_cart_modify">修改</string>
    <string name="module_menu_cart_clear">清空</string>
    <string name="module_menu_cart_must_select_remark">在本店消费，以下商品必选哦</string>
    <string name="module_menu_cart_summary_label">购物车里有: </string>
    <string name="module_menu_cart_summary_amount">合计: </string>
    <string name="module_menu_cart_summart_foodnum">%1$s%2$d个</string>
    <string name="module_menu_cart_submenu_foodnum">%1$s%2$s%3$s</string>
    <string name="module_menu_cart_feed_foodnum">+%1$s%2$s%3$s</string>
    <string name="module_menu_cart_food_standby">(待)</string>
    <string name="module_menu_food_category">商品分类</string>
    <string name="module_menu_cart_combo_select_child">请选择套餐里的商品</string>
    <string name="module_menu_mustselect_child">请选择必选商品里的套餐</string>
    <string name="module_menu_cart_empty">购物车为空，不能下单</string>
    <string name="module_menu_cart_clear_hint">确定要清空购物车吗？</string>
    <string name="module_menu_cart_sure_order">下单</string>
    <string name="module_menu_cart_go_on">继续点菜</string>
    <string name="module_menu_cart_hang_up">挂单</string>
    <string name="module_menu_confirm">确定</string>
    <string name="module_menu_join_cart_success">%1$s点菜成功</string>
    <string name="module_menu_join_cart_fail_offshelves">点菜失败，该菜已下架</string>
    <string name="module_menu_join_cart_fail_soldout">点菜失败，该菜已售完</string>
    <string name="module_menu_cart_dialog_clearing">正在清空</string>
    <string name="module_menu_cart_dialog_joining">正在加入购物车</string>
    <string name="module_menu_cart_not_support_combo_hint">二维火收银(手机版)暂不支持点套餐，请在二维火收银机上操作，或让顾客使用扫码点菜！</string>
    <string name="module_menu_cart_dialog_iknow">我知道了</string>
    <string name="module_menu_cartdetail_food_weight">商品重量</string>
    <string name="module_menu_cartdetail_feed">加料</string>
    <string name="module_menu_cartdetail_remark">备注</string>
    <string name="module_menu_cartdetail_remark_hint">手动输入备注</string>
    <string name="module_menu_cartdetail_standby">暂不上菜</string>
    <string name="module_menu_cartdetail_presenter">赠送这个菜</string>
    <string name="module_menu_cartdetail_spec">规格</string>
    <string name="module_menu_cartdetail_makename">做法</string>
    <string name="module_menu_cartdetail_mustselect">(必选)</string>
    <string name="module_menu_cartdetail_make_addprice_once">+ %1$s</string>
    <string name="module_menu_cartdetail_make_addprice_per">+ %2$s/%1$s</string>
    <string name="module_menu_cartdetail_num">数量</string>
    <string name="module_menu_cartdetail_join_cart">加入购物车</string>
    <string name="module_menu_cartdetail_join_combo">加入套餐</string>
    <string name="module_menu_cartdetail_ordered_num">已点%1$s%2$s</string>
    <string name="module_menu_cartdetail_notdata_error">无法获取当前的菜肴数据</string>
    <string name="module_menu_cartdetail_delete_food">确定要删除此商品吗？</string>
    <string name="module_menu_cartdetail_submit_order_positive">确认加菜</string>
    <string name="module_menu_cartdetail_submit_order_negative">更换桌号</string>
    <string name="module_menu_cartdetail_submit_order_alert">该桌已开单，您可以选择给该桌加菜，也可以选择更换桌号</string>
    <string name="module_menu_cartdetail_soldout">已售完</string>
    <string name="module_menu_cart_empty_title">购物车是空的</string>
    <string name="module_menu_cart_empty_subcontent">请返回到菜单页面开始点菜</string>
    <string name="module_menu_cart_expired_title">购物车已过期</string>
    <string name="module_menu_cart_expired_subcontent">挂起时间超过2小时，请重新点菜</string>
    <string name="module_menu_cart_spec_empty">请选择规格</string>
    <string name="module_menu_cart_make_empty">请选择做法</string>
    <string name="module_menu_cart_present_food_not_permission">您没有“赠菜”权限，无法进行此操作！</string>
    <string name="module_menu_cart_detail_num_too_small">数量必选大于零</string>
    <string name="module_menu_qr_find_instance_prompt">请扫描菜品二维码</string>
    <string name="module_menu_toast_please_scan_menu">你扫描的二维码错误，请扫描菜品二维码</string>
    <string name="module_menu_cart_hangup_order_success">挂单成功</string>
    <string name="module_menu_cart_hangup_order_fail">挂单失败</string>
    <string name="module_menu_retail_title">开单</string>
    <string name="module_menu_retail_custom_food_count">数量</string>
    <string name="module_menu_retail_hint_search_food">商品名称、简拼或条形码</string>
    <string name="module_menu_retail_category">分类</string>
    <string name="module_menu_retail_weigh_label">重量:</string>
    <string name="module_menu_retail_weigh_input_hint">请输入商品重量</string>
    <string name="module_menu_retail_weigh_unit">kg</string>
    <string name="module_menu_retail_add_to_cart">加入购物车</string>
    <string name="module_menu_retail_please_enter_weigh">请输入商品重量</string>
    <string name="module_menu_retail_check_input_count">商品数量不能为空</string>
    <string name="module_menu_retail_check_input_count_must_than_zero">商品数量必须大于0</string>
    <string name="module_menu_retail_check_out">收款</string>
    <string name="module_menu_retail_summary_food_num">%s件商品</string>
    <string name="module_menu_retail_same_goods">请选择同码商品</string>
    <string name="module_menu_retail_qr_find_instance_prompt">请扫描商品条形码或二维码</string>
    <string name="module_menu_retail_scan">扫一扫</string>
    <string name="module_menu_retail_nix">无</string>
    <string name="module_menu_retail_cart_present_food_not_permission">您没有“赠送商品”的权限，无法进行此操作！</string>
    <string name="module_menu_retail_cartdetail_presenter">赠送这个商品</string>
    <string name="module_menu_retail_no_commodity">没有此商品</string>
    <string name="module_menu_retail_join_cart_success">%1$s添加成功</string>
    <string name="module_menu_retail_cart_go_on">添加商品</string>
    <string name="module_menu_retail_item">件</string>
    <string name="module_menu_retail_no_barcode_label">—</string>
    <string name="module_menu_retail_permission_order_begin_">您没有“开单收款”的权限，无法进行此操作！</string>
</resources>