<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.zmsoft.ccd.lib.widget.couponview.LinearLayoutCouponView
        android:id="@+id/layout_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_item_bg"
        android:orientation="vertical"
        android:padding="@dimen/padding_small"
        app:cv_is_semicircle_bottom="true"
        app:cv_is_semicircle_top="true"
        app:cv_semicircle_color="@color/cv_semicircle_color"
        app:cv_semicircle_gap="@dimen/cv_semicircle_gap"
        app:cv_semicircle_radius="@dimen/cv_semicircle_radius">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/module_menu_cart"
            android:textColor="@color/common_blue"
            android:textSize="@dimen/text_size_large" />
    </com.zmsoft.ccd.lib.widget.couponview.LinearLayoutCouponView>

    <View
        android:id="@+id/view_divider"
        style="@style/CouponDividerStyle" />

    <com.zmsoft.ccd.lib.widget.couponview.LinearLayoutCouponView
        android:id="@+id/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/list_item_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_medium"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="@dimen/padding_medium"
        app:cv_is_semicircle_bottom="true"
        app:cv_is_semicircle_top="true"
        app:cv_semicircle_color="@color/cv_semicircle_color"
        app:cv_semicircle_gap="@dimen/cv_semicircle_gap"
        app:cv_semicircle_radius="@dimen/cv_semicircle_radius">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_empty_miguan" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_empty_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/module_menu_cart_empty_title"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/text_empty_sub_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/module_menu_cart_empty_subcontent"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </com.zmsoft.ccd.lib.widget.couponview.LinearLayoutCouponView>
</LinearLayout>
